# mujoco_panda

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/mujoco_panda/: control_math.h  controller.hpp  model.h  model.hpp  quadratic_programming.h  quadratic_programming.hpp  trajectory.h  trajectory.hpp
meshes/visual/: finger.stl  hand.stl
models/: franka_panda.urdf  franka_panda.xml
src/: controller.cpp  model.cpp  quadratic_programming.cpp  send_command_request_node.cpp  send_command_topic_node.cpp  simulate.cc  trajectory.cpp
srv/: Commands.srv
